Fix footer z-index

--- a/src/CSS/typeography.scss
+++ b/src/CSS/typeography.scss
@@ -32,10 +32,6 @@ h6 {
   margin: 0;
 }
 
-h2 {
-  font-size: 2rem;
-}
-
 h3 {
   font-family: $font-main;
 }
