--- a/src/components/BookingBar/BookingBar.module.scss
+++ b/src/components/BookingBar/BookingBar.module.scss
@@ -14,6 +14,7 @@
 
   h2 {
     display: none;
+    font-size: 1.5rem;
   }
 
   &_cost {
