--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,10 @@
 @import '../../CSS/base';
 
-.footer {
+.container {
+  position: relative;
   z-index: 22;
+}
+.footer {
   margin-top: 3rem;
   padding: 3rem 0;
   display: flex;
